# CMake_Examples

./: .clang-format  .clang-tidy  .gitignore
01_version/: CMakeLists.txt  main.cpp  version.cpp.in  version.hpp
02_cxx_standard/: CMakeLists.txt
